--- a/src/css/style.css
+++ b/src/css/style.css
@@ -174,6 +174,10 @@ section {
           flex: 1 1 42rem;
 }
 
+.header-title{
+  font-size: 2.5rem !important;
+}
+
 .home .content h3 {
   font-size: 4.5rem;
   text-transform: capitalize;
@@ -233,7 +237,7 @@ section {
           align-items: center;
   -ms-flex-wrap: wrap-reverse;
       flex-wrap: wrap-reverse;
-  gap: 3rem;
+  gap: 8rem;
 }
 
 .about .image {
@@ -260,7 +264,7 @@ section {
 }
 
 .about .content p {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   line-height: 2;
   color: #777;
   padding: 1rem 0;
